Add react skeleton and elements for menu

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./assets/stylesheets/master.css">
-    <script src="./lib/bundle.js" charset="utf-8"></script>
+    <script src="./app/assets/javascripts/lib/bundle.js" charset="utf-8"></script>
   </head>
   <body>
-    <div class="main">
+    <div class="canvas">
       <canvas id="game-canvas"></canvas>
       <canvas id="background-canvas"></canvas>
-      <canvas id="foreground-canvas"></canvas>
     </div>
+    <div id="menu"/>
   </body>
 </html>
