add modal for pop-up-menu

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <script src="./app/assets/javascripts/lib/bundle.js" charset="utf-8"></script>
   </head>
   <body>
-    <div class="canvas">
-      <canvas id="game-canvas"></canvas>
+    <div id="canvas">
       <canvas id="background-canvas"></canvas>
+      <canvas id="game-canvas"></canvas>
     </div>
     <div id="menu"/>
   </body>
