--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Italianno|Tangerine" rel="stylesheet">
     <link rel="stylesheet" href="./assets/stylesheets/master.css">
+    <script src="https://use.fontawesome.com/f14397ed38.js"></script>
     <script src="./app/assets/javascripts/lib/bundle.js" charset="utf-8"></script>
   </head>
   <body>
