Fixed alignment of game

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <script src="./app/assets/javascripts/lib/bundle.js" charset="utf-8"></script>
   </head>
   <body>
-    <div id="canvas">
-      <canvas id="background-canvas"></canvas>
+    <div id="background">
       <canvas id="game-canvas"></canvas>
+      <div id="menu"/>
     </div>
-    <div id="menu"/>
   </body>
 </html>
