--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-99125735-3', 'auto');
+      ga('send', 'pageview');
+
+    </script>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Italianno|Tangerine" rel="stylesheet">
     <link rel="stylesheet" href="./assets/stylesheets/master.css">
