--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Italianno|Tangerine" rel="stylesheet">
     <link rel="stylesheet" href="./assets/stylesheets/master.css">
+    <link rel="icon" href="assets/favicon.png">
     <script src="https://use.fontawesome.com/f14397ed38.js"></script>
     <script src="./app/assets/javascripts/lib/bundle.js" charset="utf-8"></script>
   </head>
